--- a/css/styles.css
+++ b/css/styles.css
@@ -556,7 +556,51 @@ h3 {
       background-size: cover;
   }
 
+  .project-shaggy-supps .project_34 {
+    background-image: url(../img/GIF-ShaggySupps-01.jpg);
+  }
 
+  .project-shaggy-supps .square-image1 {
+    background-image: url(../img/GIF-ShaggySupps-03.jpg);
+    background-position: center center!important;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+
+  .project-dropship-bundles .project_33 {
+    background-image: url(../img/GIF-DropshipBundles-01.jpg);
+  }
+
+  .project-dropship-bundles .square-image1 {
+    background-image: url(../img/GIF-DropshipBundles-03.jpg);
+    background-position: center center!important;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+
+  .project-flyt-buddy .project_32 {
+    background-image: url(../img/GIF-FlytBuddy-01.jpg);
+  }
+
+  .project-flyt-buddy .square-image1 {
+    background-image: url(../img/GIF-FlytBuddy-03.jpg);
+    background-position: center center!important;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .project-elia-truly .project_31 {
+    background-image: url(../img/GIF-EliaTruly-01.jpg);
+  }
+
+  .project-elia-truly .square-image1 {
+    background-image: url(../img/GIF-EliaTruly-03.jpg);
+    background-position: center center!important;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
 
 /*MAIN*/
