--- a/css/styles.css
+++ b/css/styles.css
@@ -593,7 +593,7 @@ h3 {
       background-size: cover;
   }
 
-  
+
 
   .project-compass-rose .project_30 {
     background-image: url(../img/GIF-CompassRose-01.jpg);
@@ -631,11 +631,11 @@ h3 {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
+
   .project-dropship-bundles .project_33 {
     background-image: url(../img/GIF-DropshipBundles-01.jpg);
   }
-  
+
   .project-dropship-bundles .square-image1 {
     background-image: url(../img/GIF-DropshipBundles-03.jpg);
     background-position: center center!important;
@@ -646,13 +646,26 @@ h3 {
   .project-shaggy-supps .project_34 {
     background-image: url(../img/GIF-ShaggySupps-01.jpg);
   }
-  
+
   .project-shaggy-supps .square-image1 {
     background-image: url(../img/GIF-ShaggySupps-03.jpg);
     background-position: center center!important;
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .project-meal-prep-pro .project_35 {
+    background-image: url(../img/Meal-Prep-Pro-01.jpg);
+  }
+
+  .project-meal-prep-pro .square-image1 {
+    background-image: url(../img/Meal-Prep-Pro-03.jpg);
+    background-position: center center!important;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+
 /* END PORTFOLIO IMAGES */
 
 /*MAIN*/
@@ -2464,3 +2477,33 @@ img.full-width, img.img-fw {
 .second-author {
     margin-top: 0;
 }
+
+
+/**/
+
+.hover-overlay {
+    position:  absolute;
+    z-index:  9;
+    height:  100%;
+    width:  100%;
+    opacity: 0;
+    text-align:  center;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: 0.3s opacity ease-in-out;
+}
+
+article {
+    position:  relative;
+}
+
+.hover-overlay .project-text {
+    display:  inline-block;
+    color:  white;
+    padding-top:  20%;
+    }
+
+
+article:hover .hover-overlay {
+    opacity: 1;
+    cursor:  pointer;
+    }
