--- a/css/animate.css
+++ b/css/animate.css
@@ -3341,3 +3341,36 @@
   -webkit-animation-name: slideOutUp;
   animation-name: slideOutUp;
 }
+
+@-webkit-keyframes buttonBounce {
+    0% {
+        transform: scale(1);
+    }
+
+    90% {
+        transform: scale(1.5);
+    }
+
+    100% {
+        transform: scale(1.4);
+    }
+}
+
+@keyframes buttonBounce {
+    0% {
+        transform: scale(1);
+    }
+
+    90% {
+        transform: scale(1.5);
+    }
+
+    100% {
+        transform: scale(1.4);
+    }
+}
+
+.buttonBounce {
+  -webkit-animation-name: buttonBounce;
+  animation-name: buttonBounce;
+}
