--- a/css/styles.css
+++ b/css/styles.css
@@ -443,11 +443,11 @@ h3 {
 
 
   .project-tier11 .project_16 {
-      background-image: url(../img/GIF-Tier11-01.png);
+      background-image: url(../img/GIF-Tier11-01.jpg);
   }
 
   .project-tier11 .square-image1 {
-      background-image: url(../img/GIF-Tier11-03.png);
+      background-image: url(../img/GIF-Tier11-03.jpg);
       background-position: right center!important;
       background-repeat: no-repeat;
       background-size: cover;
@@ -593,8 +593,6 @@ h3 {
       background-size: cover;
   }
 
-
-
   .project-compass-rose .project_30 {
     background-image: url(../img/GIF-CompassRose-01.jpg);
 }
@@ -604,11 +602,6 @@ h3 {
     background-repeat: no-repeat;
     background-size: cover;
   }
-
-
-
-
-
 
 .project-elia-truly .project_31 {
   background-image: url(../img/GIF-EliaTruly-01.jpg);
@@ -2585,13 +2578,63 @@ i.fas.fa-play {
      color: rgba(255, 255, 255, 0.7);
  }
 
- .no-scroll{
+ /* .no-scroll{
      overflow: hidden;
- }
+ } */
 
  iframe.modal-video-frame {
-     height: 40vh;
      top: 50px;
-     width: 50%;
-     display: inline-block;
+     right: 0;
+     width: 90%;
+     position: absolute;
+     left: 0;
+     padding: 0 5%;
+     min-height: 340px;
  }
+
+/**/
+
+   /* VIDEO TESTIMONIAL    */
+
+.video-testimonial-img {
+    width: 100%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.video-testimonial-btn {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 40%;
+    text-align: center;
+}
+
+.video-testimonial {
+    position: relative;
+}
+
+.video-testimonial-block {
+    width: 60%;
+    max-width: 855px;
+    margin: 10% auto;
+}
+
+.video-testimonial-img svg:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+.video-testimonial-img svg{
+    transition: 0.1s transform ease-in-out;
+    background-color: transparent!important;
+    border: 2px solid transparent!important;
+}
+
+svg.video-btn {
+    width: 10%;
+    height: 10%;
+    max-width:  100px;
+}
+
+/**/
